--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.0.2
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.15.0
   flutter:
     sdk: flutter
   google_fonts: ^5.1.0
